Fix logo color in dark mode

--- a/source/sass/components/_logo.scss
+++ b/source/sass/components/_logo.scss
@@ -11,7 +11,7 @@
     fill: var(--color-type);
 
     @media screen and (prefers-color-scheme: dark) {
-      --color-type: #{map-get($colors-palette, "white")};
+      --color-type: #{map-get($colors-palette, white)};
     }
   }
 }
